[package]
name = "retouch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
dateparser = "0.1.7"
enumset = "1.0.12"
getopt = "1.1.3"
globwalk = "0.8.1"
quickexif = "0.1.5"
walkdir = "2.3.2"
