[package]
name = "retouch"
version = "0.0.1"
edition = "2021"
description = "Set image file (jpg, tiff) create/modification datetime to datetime from EXIF."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dgrbic/retouch"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
dateparser = "0.1.7"
enumset = "1.0.12"
filetime_creation = "0.1.1"
globwalk = "0.8.1"
quickexif = "0.1.5"
walkdir = "2.3.2"
